Fix phone verification task behavior to match upload documents pattern
- Phone verification now gets disabled when completed, same as upload documents task
- Updated task status logic to mark phone verification as completed when user verifies through mobile app
- Removed special handling for phone verification in handleTaskPress - now uses same logic as other tasks
- Fixed UI rendering to show checkmark and disable task when phone verification is completed
- Updated allTasksCompleted logic to use consistent status checking for all tasks
- Added mobile app verification tracking with storage flag to distinguish from admin-set verification

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -6,7 +6,8 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
+    "newArchEnabled": false,
+    "scheme": "enout-mobile",
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -30,12 +31,7 @@
       "tool": "expo-cli"
     },
     "plugins": [
-      [
-        "expo-router",
-        {
-          "origin": false
-        }
-      ]
+      "expo-router"
     ]
   }
 }
