feat: Complete production-ready implementation with auth, messages, attachments, mobile fixes, and logout removal
Major Changes:
- Authentication System: Implemented production-ready JWT auth for admin dashboard with localStorage token management
- Admin Dashboard: Added login page with environment variable support for credentials
- Backend Auth: Implemented admin and mobile JWT strategies with proper guards
- Message System: Fixed message duplication in sent tab, added grouping logic, implemented attachment uploads
- Attachment Support: Full file upload/download for messages with server-side storage
- Mobile App: Fixed invite display issue, fixed event details API endpoints, corrected base URLs
- Mobile UI: Removed logout functionality from profile screen
- Static Files: Configured static asset serving for uploaded files
- Environment Variables: Updated turbo.json to include JWT_SECRET

Features Added:
✓ Admin authentication with JWT tokens
✓ Message attachment uploads and downloads
✓ Event image upload functionality
✓ Mobile OTP-based authentication
✓ Automatic session expiry
✓ Secure logout with token cleanup

Fixes:
✓ Message duplication in sent messages tab
✓ Mobile invite 'no invites' screen issue
✓ Mobile event details 404 errors
✓ Attachment visibility in mobile inbox
✓ TypeScript compilation errors
✓ ESLint violations

Testing:
✓ All API endpoints working
✓ Admin authentication flows verified
✓ Mobile app invite flow tested
✓ Message attachments upload/download verified
✓ No breaking changes to existing functionality

--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,10 @@ ios/Pods/
 *.tmp
 *.temp
 
+# Uploaded files
+/apps/api/uploads/
+/apps/api/uploads/**
+
 # Lock files (keep pnpm-lock.yaml but ignore others)
 package-lock.json
 yarn.lock
