--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["NODE_ENV", "PORT", "NEXT_PUBLIC_API_URL"],
+  "globalEnv": ["NODE_ENV", "PORT", "NEXT_PUBLIC_API_URL", "JWT_SECRET"],
   "pipeline": {
     "build": {
       "dependsOn": ["^build"],
