--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -32,6 +32,8 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.1.1",
     "date-fns": "^3.0.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.545.0",
     "msw": "^2.0.11",
     "next": "^14.1.0",
